[gd_scene load_steps=27 format=2]

[ext_resource path="res://offline_levels/level5/layer.tscn" type="PackedScene" id=1]
[ext_resource path="res://resources/offline_mode_Asset/level_5/application_layer.png" type="Texture" id=2]
[ext_resource path="res://resources/offline_mode_Asset/level_5/physical_layer.png" type="Texture" id=3]
[ext_resource path="res://resources/offline_mode_Asset/level_5/network_layer.png" type="Texture" id=4]
[ext_resource path="res://resources/offline_mode_Asset/level_5/transport_layer.png" type="Texture" id=5]
[ext_resource path="res://resources/offline_mode_Asset/level_5/session_layer.png" type="Texture" id=6]
[ext_resource path="res://resources/offline_mode_Asset/level_5/presentation_layer.png" type="Texture" id=7]
[ext_resource path="res://resources/offline_mode_Asset/level_5/data_link_layer.png" type="Texture" id=8]
[ext_resource path="res://offline_levels/level5/slot.tscn" type="PackedScene" id=9]
[ext_resource path="res://offline_levels/level5/manager.gd" type="Script" id=10]
[ext_resource path="res://offline_levels/general_scenes/game_over.tscn" type="PackedScene" id=11]
[ext_resource path="res://offline_levels/general_scenes/instructions.tscn" type="PackedScene" id=12]
[ext_resource path="res://resources/soundtrack/level/submit.wav" type="AudioStream" id=13]
[ext_resource path="res://nodes/level_pause.tscn" type="PackedScene" id=14]
[ext_resource path="res://resources/Themes/instruction.tres" type="Theme" id=15]
[ext_resource path="res://inventory_system/data/resources/settings_data.tres" type="Resource" id=16]
[ext_resource path="res://resources/offline_mode_Asset/level_5/bg.png" type="Texture" id=17]
[ext_resource path="res://resources/font/BD_Cartoon_Shout.ttf" type="DynamicFontData" id=18]
[ext_resource path="res://resources/Themes/level2_theme.tres" type="Theme" id=19]
[ext_resource path="res://resources/offline_mode_Asset/level_5/osi_model.png" type="Texture" id=20]
[ext_resource path="res://resources/offline_mode_Asset/level_5/glas2.png" type="Texture" id=21]
[ext_resource path="res://scenes/others/reset_timer.tscn" type="PackedScene" id=22]

[sub_resource type="Animation" id=10]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=11]
resource_name = "animation"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9 ]
}

[sub_resource type="DynamicFont" id=12]
size = 18
font_data = ExtResource( 18 )

[sub_resource type="DynamicFont" id=13]
size = 18
font_data = ExtResource( 18 )

[node name="level5" type="Control"]
margin_left = 239.0
margin_top = 165.0
margin_right = 239.0
margin_bottom = 165.0
script = ExtResource( 10 )
layer1 = NodePath("layer1")
layer2 = NodePath("layer2")
layer3 = NodePath("layer3")
layer4 = NodePath("layer4")
layer5 = NodePath("layer5")
layer6 = NodePath("layer6")
layer7 = NodePath("layer7")
slot1 = NodePath("slot_container/slot1")
slot2 = NodePath("slot_container/slot2")
slot3 = NodePath("slot_container/slot3")
slot4 = NodePath("slot_container/slot4")
slot5 = NodePath("slot_container/slot5")
slot6 = NodePath("slot_container/slot6")
slot7 = NodePath("slot_container/slot7")
slot_container = NodePath("slot_container")
popup_score_label = NodePath("popup_layer/game_over/main_popup/score")
game_over_popup = NodePath("popup_layer/game_over")
popup_next_button = NodePath("popup_layer/game_over/main_popup/GridContainer/next")
popup_retry_button = NodePath("popup_layer/game_over/main_popup/GridContainer/retry")
popup_indicator_label = NodePath("popup_layer/game_over/main_popup/indicator")
crowns = NodePath("popup_layer/game_over/main_popup/crowns")
gameover_anim = NodePath("popup_layer/game_over/AnimationPlayer")
celebration = NodePath("popup_layer/game_over/AnimationPlayer/Sprite")
audioplayer = NodePath("popup_layer/game_over/AudioStreamPlayer")
net1_skills = NodePath("popup_layer/game_over/main_popup/net1_skills")
coins = NodePath("popup_layer/game_over/main_popup/GridContainer2/coins")
animation_player = NodePath("popup_layer/instructions/main_popup/AnimationPlayer")
instructions_popup = NodePath("popup_layer/instructions")
instructions_sprite = NodePath("popup_layer/instructions/main_popup/AnimationPlayer/level5")
settings_data = ExtResource( 16 )

[node name="popup_layer@pause@settings@musicSubmenu@musicPanel@_h_scroll2" type="HScrollBar" parent="."]
margin_right = 12.0
margin_bottom = 12.0

[node name="popup_layer@pause@settings@musicSubmenu@musicPanel@_v_scroll2" type="VScrollBar" parent="."]
margin_right = 25.0

[node name="popup_layer@pause@settings@musicSubmenu@musicPanel@_h_scroll3" type="HScrollBar" parent="."]
margin_right = 12.0
margin_bottom = 12.0

[node name="popup_layer@pause@settings@musicSubmenu@musicPanel@_v_scroll3" type="VScrollBar" parent="."]
margin_right = 25.0

[node name="popup_layer@pause@settings@videoSubmenu@videoPanel@_h_scroll2" type="HScrollBar" parent="."]
margin_right = 12.0
margin_bottom = 12.0

[node name="popup_layer@pause@settings@videoSubmenu@videoPanel@_v_scroll2" type="VScrollBar" parent="."]
margin_right = 25.0

[node name="popup_layer@pause@settings@videoSubmenu@videoPanel@_h_scroll3" type="HScrollBar" parent="."]
margin_right = 12.0
margin_bottom = 12.0

[node name="popup_layer@pause@settings@videoSubmenu@videoPanel@_v_scroll3" type="VScrollBar" parent="."]
margin_right = 25.0

[node name="popup_layer" type="CanvasLayer" parent="."]

[node name="pause" parent="popup_layer" instance=ExtResource( 14 )]

[node name="game_over" parent="popup_layer" instance=ExtResource( 11 )]
visible = false

[node name="instructions" parent="popup_layer" instance=ExtResource( 12 )]

[node name="content" parent="popup_layer/instructions/main_popup" index="1"]
margin_bottom = 30.0
rect_min_size = Vector2( 900, 230 )
text = "You'll be challenged to arrange the layers of the OSI model in the correct order. To do this, simply tap and hold on a layer, then drag it to the corresponding slot. Start from the bottom layer as the 1st layer and work your way up to the top layer, placing each layer in its correct position. Use your knowledge of the OSI model to solve this puzzle and proceed further in the game. Good luck!"

[node name="AnimationPlayer" parent="popup_layer/instructions/main_popup" index="2"]
playback_speed = 0.25
anims/RESET = SubResource( 10 )
anims/animation = SubResource( 11 )

[node name="Sprite" parent="popup_layer/instructions/main_popup/AnimationPlayer" index="0"]
visible = false

[node name="level3" parent="popup_layer/instructions/main_popup/AnimationPlayer" index="1"]
visible = false

[node name="level4" parent="popup_layer/instructions/main_popup/AnimationPlayer" index="2"]
visible = false

[node name="level7" parent="popup_layer/instructions/main_popup/AnimationPlayer" index="4"]
visible = false

[node name="level8" parent="popup_layer/instructions/main_popup/AnimationPlayer" index="5"]
visible = false

[node name="level6" parent="popup_layer/instructions/main_popup/AnimationPlayer" index="6"]
visible = false

[node name="level2" parent="popup_layer/instructions/main_popup/AnimationPlayer" index="7"]
visible = false

[node name="NinePatchRect" type="NinePatchRect" parent="."]
margin_left = -240.0
margin_top = -165.0
margin_right = 1682.0
margin_bottom = 916.0
texture = ExtResource( 17 )

[node name="slot_container" type="GridContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 1001.0
margin_top = 33.0
margin_right = 1361.0
margin_bottom = 555.0
custom_constants/vseparation = 10

[node name="slot7" parent="slot_container" instance=ExtResource( 9 )]

[node name="slot6" parent="slot_container" instance=ExtResource( 9 )]
margin_top = 76.0
margin_bottom = 142.667

[node name="slot5" parent="slot_container" instance=ExtResource( 9 )]
margin_top = 152.0
margin_bottom = 218.667

[node name="slot4" parent="slot_container" instance=ExtResource( 9 )]
margin_top = 228.0
margin_bottom = 294.667

[node name="slot3" parent="slot_container" instance=ExtResource( 9 )]
margin_top = 304.0
margin_bottom = 370.667

[node name="slot2" parent="slot_container" instance=ExtResource( 9 )]
margin_top = 380.0
margin_bottom = 446.667

[node name="slot1" parent="slot_container" instance=ExtResource( 9 )]
margin_top = 456.0
margin_bottom = 522.667

[node name="button_container" type="GridContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 1060.0
margin_top = 579.0
margin_right = 1310.0
margin_bottom = 679.0
custom_constants/hseparation = 50
columns = 2

[node name="reload" type="Button" parent="button_container"]
margin_right = 100.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
theme = ExtResource( 19 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 12 )
text = "RELOAD"

[node name="submit" type="Button" parent="button_container"]
margin_left = 150.0
margin_right = 250.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
theme = ExtResource( 19 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 13 )
text = "SUBMIT"

[node name="model_bg" type="NinePatchRect" parent="."]
margin_right = 842.0
margin_bottom = 673.0
texture = ExtResource( 21 )

[node name="layer1" parent="." instance=ExtResource( 1 )]
margin_left = 50.0
margin_top = 50.0
margin_right = 410.0
margin_bottom = 116.667
texture = ExtResource( 3 )
id = "0"

[node name="layer2" parent="." instance=ExtResource( 1 )]
margin_left = 450.0
margin_top = 50.0
margin_right = 810.0
margin_bottom = 116.667
texture = ExtResource( 8 )
id = "1"

[node name="layer3" parent="." instance=ExtResource( 1 )]
margin_left = 50.0
margin_top = 250.0
margin_right = 410.0
margin_bottom = 316.667
texture = ExtResource( 4 )
id = "2"

[node name="layer4" parent="." instance=ExtResource( 1 )]
margin_left = 450.0
margin_top = 250.0
margin_right = 810.0
margin_bottom = 316.667
texture = ExtResource( 5 )
id = "3"

[node name="layer5" parent="." instance=ExtResource( 1 )]
margin_left = 50.0
margin_top = 450.0
margin_right = 410.0
margin_bottom = 516.667
texture = ExtResource( 6 )
id = "4"

[node name="layer6" parent="." instance=ExtResource( 1 )]
margin_left = 450.0
margin_top = 450.0
margin_right = 810.0
margin_bottom = 516.667
texture = ExtResource( 7 )
id = "5"

[node name="layer7" parent="." instance=ExtResource( 1 )]
margin_left = 254.0
margin_top = 575.0
margin_right = 614.0
margin_bottom = 641.667
texture = ExtResource( 2 )
id = "6"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )
bus = "SFX"

[node name="instruction" type="Button" parent="."]
margin_left = 1566.0
margin_top = 802.0
margin_right = 1666.0
margin_bottom = 902.0
theme = ExtResource( 15 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 430, -69 )
texture = ExtResource( 20 )

[node name="manager" parent="." instance=ExtResource( 22 )]

[connection signal="pressed" from="popup_layer/game_over/main_popup/GridContainer/next" to="." method="_on_next_pressed"]
[connection signal="pressed" from="button_container/reload" to="." method="_on_reload_pressed"]
[connection signal="pressed" from="button_container/submit" to="." method="_on_submit_pressed"]
[connection signal="pressed" from="instruction" to="." method="_on_instruction_pressed"]

[editable path="popup_layer/pause"]
[editable path="popup_layer/pause/CanvasLayer/settings"]
[editable path="popup_layer/game_over"]
[editable path="popup_layer/instructions"]
